# prefect-certification-course

./: LICENSE  flowtest.py  prefect.yaml  pyproject.toml  readme.md
.prefect/: flows.json
101/: weather-test.py  weather1-bare.py  weather1-flow.py  weather2-bare.py
102/: results1.py  retry-flow.py  subflow.py
103/: block-json-create.py  secret-block1.py  secret-block2.py
