[tool.poetry]
name = "prefect-certification-course"
version = "0.1.0"
description = ""
authors = ["Dong Liang <ldifer@gmail.com>"]
readme = "README.md"
packages = [{ include = "prefect_certification_course" }]

[tool.poetry.dependencies]
python = "^3.9"
prefect = { extras = ["databricks"], version = "^2.7.10" }
ipykernel = "^6.15.1"
matplotlib = "^3.5.3"
PySnooper = "^1.1.1"
pandas = "^1.5.2"
scikit-learn = "^1.2.0"
hydra-core = "^1.3.2"
pydantic = "^1.10.7"
cryptography = "^41.0.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^4.0.1"
black = { extras = ["jupyter"], version = "^22" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
